--- a/devops-cloud/src/index.html
+++ b/devops-cloud/src/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="texts">
-                 <h1 data-text="Sucess is choice Ed">Hello World...</h1>
+                 <h1 data-text="Success is only choice!">Success is only choice!</h1>
             
             <h2  id="text"> </h2>
         </div>
